<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_difficulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/container_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dlg_margin_outside"
        android:background="@drawable/shape_rounded_rect"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_difficult_label"
            style="@style/TextAppearance.HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal"
            android:layout_marginTop="@dimen/dlg_margin_top"
            android:layout_marginBottom="@dimen/dlg_margin_inner"
            android:gravity="center"
            android:text="@string/difficulty" />

        <Button
            android:id="@+id/btn_easy"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal"
            android:layout_marginVertical="@dimen/dlg_margin_inner"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/easy" />

        <Button
            android:id="@+id/btn_normal"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal"
            android:layout_marginVertical="@dimen/dlg_margin_inner"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/normal" />

        <Button
            android:id="@+id/btn_hard"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal"
            android:layout_marginTop="@dimen/dlg_margin_inner"
            android:layout_marginBottom="@dimen/dlg_margin_bottom"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/hard" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_close_difficulty"
        style="@style/ImageButton.Close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/close_pause_menu"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="@+id/container_difficulty"
        app:layout_constraintTop_toTopOf="@+id/container_difficulty"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>