<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.mainmenu.MainMenuFragment">

    <ImageView
        android:id="@+id/img_backgroung"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_background"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/img_btn_settings"
            style="@style/ImageButton.Main"
            android:layout_width="@dimen/img_btn_size"
            android:layout_height="@dimen/img_btn_size"
            android:contentDescription="@string/settings"
            android:padding="@dimen/btn_inset"
            android:src="@drawable/ic_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/img_btn_stats"
            style="@style/ImageButton.Main"
            android:layout_width="@dimen/img_btn_size"
            android:layout_height="@dimen/img_btn_size"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/stats"
            android:padding="@dimen/btn_inset"
            android:src="@drawable/ic_stats"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/img_btn_settings"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dlg_margin_outside"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_logo_left"
                    style="@style/TextAppearance.LogoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:gravity="center_vertical|end"
                    android:text="@string/logo_left"
                    android:textColor="?attr/colorSecondaryVariant"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txt_logo_right"
                    style="@style/TextAppearance.LogoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|end"
                    android:text="@string/logo_right"
                    android:textColor="?attr/colorSecondary"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/btn_resume"
                    style="@style/HighlightedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/resume"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/btn_new_game"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/new_game"
                    android:textColor="?attr/colorSecondary"
                    tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck,TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/difficulty_popup"
        layout="@layout/layout_difficult_popup" />

    <include
        android:id="@+id/settings_popup"
        layout="@layout/layout_settings_popup" />

</FrameLayout>