<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/container_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dlg_margin_outside"
        android:background="@drawable/shape_rounded_rect"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_settings_label"
            style="@style/TextAppearance.HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal"
            android:layout_marginTop="@dimen/dlg_margin_top"
            android:layout_marginBottom="@dimen/dlg_margin_inner"
            android:gravity="center"
            android:text="@string/settings"
            tools:ignore="TextContrastCheck" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal_inset"
            android:layout_marginVertical="@dimen/dlg_margin_inner_inset"
            android:background="@drawable/shape_round_rect_stroke">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_sounds"
                style="@style/Switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dlg_margin_start"
                android:layout_marginVertical="@dimen/dlg_margin_inner"
                android:text="@string/sounds"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/dlg_margin_horizontal_inset"
            android:layout_marginTop="@dimen/dlg_margin_inner_inset"
            android:layout_marginBottom="@dimen/dlg_margin_bottom"
            android:background="@drawable/shape_round_rect_stroke"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_theme_label"
                style="@style/TextAppearance.MainText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dlg_margin_inner"
                android:layout_marginStart="@dimen/dlg_margin_start"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/theme"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/spinner_theme_mode"
                style="@style/Spinner.DropDown"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_padded"
                android:layout_margin="@dimen/dlg_margin_inner"
                android:contentDescription="@string/theme"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_close_settings"
        style="@style/ImageButton.Close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/close_pause_menu"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="@+id/container_settings"
        app:layout_constraintTop_toTopOf="@+id/container_settings"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>